[Finished #79376308] - Fix Offer Detail Modal on Mobile
Minor fix to spacing on the modal.

--- a/web/knotis/contrib/layout/static/knotis/layout/css/screen.css
+++ b/web/knotis/contrib/layout/static/knotis/layout/css/screen.css
@@ -2577,14 +2577,13 @@ section.welcomeModal h1 {
 /* Responsive Magic */
 
 @media (max-width: 767px) {
-    
+
     .offerHero {
 	margin-bottom: 0;
     }
     
     .offerDetails {
 	top: 0;
-	margin-top: -35px;
 	margin-bottom: 0;
 	height: auto;
 	padding: 35px 35px 25px;
